kubernetes/components/network-policies-mesh/mesh-api-proxy-traffic.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mesh-api-allow-proxy-traffic
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: llm-api
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: llm-gateway
      ports:
        - protocol: TCP
          port: 4143
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: ollama
      ports:
        - protocol: TCP
          port: 4143
