kubernetes/components/network-policies-mesh/mesh-control-plane-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mesh-allow-control-plane
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: linkerd
      ports:
        - protocol: TCP
          port: 8080
        - protocol: TCP
          port: 8086
        - protocol: TCP
          port: 8090
