kubernetes/components/network-policies-mesh/mesh-pod-to-pod.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mesh-allow-proxy-port
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector: {}
      ports:
        - protocol: TCP
          port: 4143
  egress:
    - to:
        - podSelector: {}
      ports:
        - protocol: TCP
          port: 4143
